Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21038

TextInput does not select all text when a triple click happens

XMLWordPrintable

      It reacts as expected for a double click, but there's currently no support for triple click. It is expected that a triple click selects the entire line.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            rafael.lobo Rafael Brandao Lobo
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes